# webpage

./: BACKEND_README.md  README.md  app.py  install.bat  package-lock.json  package.json  requirements.txt  start_project.bat  vite.config.ts
BackEnd/: BACKEND_README.md  app.py  main.py  requirements.txt  start_app.bat
BackEnd/controllers/: ModelController.py
BackEnd/models/: Diffusion.py  GAN.py  VAE.py
BackEnd/service/: ModelService.py
FrontEnd/: README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
FrontEnd/src/: App.tsx
FrontEnd/src/components/: Contact.tsx  DrawingCanvas.tsx  Experience.tsx  Hero.tsx  ModelSelector.tsx  Projects.tsx
FrontEnd/src/pages/: SegementationCTDemo.tsx
src/: App.tsx  index.css
src/components/: Contact.tsx  Experience.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ParticleBackground.tsx  Projects.tsx  Skills.tsx
src/pages/: Index.tsx  PancreaticCancerDemo.tsx  SyntheticCTDemo.tsx
